header and footer set.

--- a/index.html
+++ b/index.html
@@ -15,12 +15,17 @@
     />
     <!-- style.css  -->
     <link rel="stylesheet" href="./Assets/css/style.css" />
+    <!-- font awesome  -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>James Holding Portfolio</title>
   </head>
   <body>
     <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container col-md-8">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <div class="container col-md">
         <a class="navbar-brand" href="index.html">James Holding</a>
         <button
           class="navbar-toggler"
@@ -51,38 +56,52 @@
       </div>
     </nav>
     <!-- Main Content  -->
-    <main class="container col-7 mt-5">
-      <header class="pb-2 pt-2 mb-2 border-bottom">
-        <h2>About Me</h2>
-      </header>
-      <div class="row">
-        <p>
-          <img
-            class="img img-thumbnail float-left"
-            src="./Assets/images/headshot.png"
-            alt="Image of James Holding"
-          />
-          Hi! I'm James and a little about me. I was born and raised
-          in the Florida Keys. Following graduation from high school I
-          enlisted in the United States Marine Corps. I served on two
-          overseas deploymenets supporting Operation Enduring Freedom
-          in places such as, Afghanistan and West Africa. After being
-          honorably discharded, I enrolled at the University of Miami
-          to study Economics and Entrenprenuership. Graduating in
-          2017, I felt I needed a change of scenery and moved to
-          Atlanta Ga, and have been here since. My work experience so
-          far has been in software as an Implementation Specialist and
-          are currently an Senior Application Development Analyst for
-          Accenture llc. and also enrolled in the Georgia Tech
-          Full-Stack Coding Bootcamp. I'm into the usual outdoor
-          activities and always looking for a new
-          challenge/adventure!
-        </p>
+    <main class="container col-md-8 mt-5">
+      <div class="card" style="width: auto;">
+        <header class="card-title pb-2 pt-2 mb-2 ml-2 border-bottom">
+          <h2>ABOUT ME</h2>
+        </header>
+        <div class="card-body">
+          <div class="row">
+            <p>
+              <img
+                class="img img-thumbnail float-left"
+                src="./Assets/images/headshot.png"
+                alt="Image of James Holding"
+              />
+              Hi! I'm James and a little about me. I was born and
+              raised in the Florida Keys. Following graduation from
+              high school I enlisted in the United States Marine
+              Corps. I served on two overseas deploymenets supporting
+              Operation Enduring Freedom in places such as,
+              Afghanistan and West Africa. After being honorably
+              discharded, I enrolled at the University of Miami to
+              study Economics and Entrenprenuership. Graduating in
+              2017, I felt I needed a change of scenery and moved to
+              Atlanta Ga, and have been here since. My work experience
+              so far has been in software as an Implementation
+              Specialist and are currently an Senior Application
+              Development Analyst for Accenture llc. and also enrolled
+              in the Georgia Tech Full-Stack Coding Bootcamp. I'm into
+              the usual outdoor activities and always looking for a
+              new challenge/adventure!
+            </p>
+          </div>
+        </div>
       </div>
     </main>
-    <!-- Footer  -->
-    <footer class="footer-copyright text-center py-2">
+     <!-- Footer  -->
+     <footer class="footer-copyright text-center py-2">
       © Copyright
+      <a href="https://www.linkedin.com/in/jamesholding">
+        <i class="fa fa-linkedin-square fa-2x"></i
+      ></a>
+      <a href="https://github.com/jmh129">
+      <i class="fa fa-github fa-2x">
+      </i></a>
+      <a href="mailto: james.holding90@gmail.com">
+        <i class="fa fa-google fa-2x">
+        </i></a>
     </footer>
     <!-- Bootsrap JS and Jquery  -->
     <script
