--- a/portfolio.html
+++ b/portfolio.html
@@ -15,12 +15,17 @@
     />
     <!-- style.css  -->
     <link rel="stylesheet" href="./Assets/css/style.css" />
+    <!-- font awesome  -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>James Holding Portfolio</title>
   </head>
   <body>
     <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container col-md-8">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <div class="container col-md">
         <a class="navbar-brand" href="index.html">James Holding</a>
         <button
           class="navbar-toggler"
@@ -35,12 +40,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="index.html"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
@@ -56,7 +61,7 @@
       <header class="pb-2 pt-2 mb-2 border-bottom">
         <h2>Portfolio</h2>
       </header>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-md-6 pt-2">
           <a
                 href="https://jmh129.github.io/gt-accessibility-html/"
@@ -126,13 +131,23 @@
                   href="https://placekitten.com/"
                   target="_blank"
                 />
-        </div>
+        </div> -->
       </div>
       </div>
     </main>
-    <footer class="footer-copyright text-center py-2">
-      © Copyright
-    </footer>
+        <!-- Footer  -->
+        <footer class="footer-copyright text-center py-2">
+          © Copyright
+          <a href="https://www.linkedin.com/in/jamesholding">
+            <i class="fa fa-linkedin-square fa-2x"></i
+          ></a>
+          <a href="https://github.com/jmh129">
+          <i class="fa fa-github fa-2x">
+          </i></a>
+          <a href="mailto: james.holding90@gmail.com">
+            <i class="fa fa-google fa-2x">
+            </i></a>
+        </footer>
     <!-- Bootsrap JS and Jquery  -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
