--- a/contact.html
+++ b/contact.html
@@ -15,12 +15,17 @@
     />
     <!-- style.css  -->
     <link rel="stylesheet" href="./Assets/css/style.css" />
+    <!-- font awesome  -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>James Holding Portfolio</title>
   </head>
   <body>
     <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container col-md-8">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <div class="container col-md">
         <a class="navbar-brand" href="index.html">James Holding</a>
         <button
           class="navbar-toggler"
@@ -35,7 +40,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="index.html"
                 >Home <span class="sr-only">(current)</span></a
               >
@@ -43,7 +48,7 @@
             <li class="nav-item">
               <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
@@ -96,11 +101,18 @@
         </form>
       </div>
     </main>
-    <footer>
-      <!-- Footer  -->
-      <footer class="footer-copyright text-center py-2">
-        © Copyright
-      </footer>
+     <!-- Footer  -->
+     <footer class="footer-copyright text-center py-2">
+      © Copyright
+      <a href="https://www.linkedin.com/in/jamesholding">
+        <i class="fa fa-linkedin-square fa-2x"></i
+      ></a>
+      <a href="https://github.com/jmh129">
+      <i class="fa fa-github fa-2x">
+      </i></a>
+      <a href="mailto: james.holding90@gmail.com">
+        <i class="fa fa-google fa-2x">
+        </i></a>
     </footer>
     <!-- Bootsrap JS and Jquery  -->
     <script
