--- a/portfolio.html
+++ b/portfolio.html
@@ -57,26 +57,61 @@
     </nav>
     <!-- Main Content  -->
     <main
-      class="container col-7 mt-5">
+      class="container col-md-8 mt-5">
       <header class="pb-2 pt-2 mb-2 border-bottom">
         <h2>Portfolio</h2>
       </header>
-      <!-- <div class="row">
-        <div class="col-md-6 pt-2">
-          <a
-                href="https://jmh129.github.io/gt-accessibility-html/"
-                target="_blank"
-              >
-                <img
-                  class="img img-fluid py-3"
-                  src="./Assets/images/horiseon.png"
-                  alt="Accessibility Project"
-                  a
-                  href="https://getbootstrap.com/docs/4.1/components/card/"
-                  target="_blank"
-                />
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="card mb-2" style="width: auto;">
+              <img class="card-img-top" src="Assets/images/alien-invaders.png" alt="BrewHub">
+              <div class="card-body">
+                <p class="card-text">A team project created to location breweries in your area as well as, giving you an endless supply of memes and jokes. Check it out next time you want to brew it up with your friends.</p>
+                <a href="https://github.com/jmh129/BruHub">
+                  <i class="fa fa-github fa-2x">
+                  </i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="card mb-2" style="width: auto;">
+              <a href="https://jmh129.github.io/gt-code-quiz/index.html">
+                <img class="card-img-top" src="Assets/images/start-quiz.png" alt="Code Quiz"></a>
+                <div class="card-body">
+                  <p class="card-text">A code quiz developed using Javascript, HTML and CSS. See how much you know! Just click the image.</p>
+                  <a href="https://github.com/jmh129/gt-code-quiz">
+                    <i class="fa fa-github fa-2x">
+                    </i></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="card mb-2" style="width: auto;">
+                <a href="https://jmh129.github.io/gt-weather-dashboard/">
+                  <img class="card-img-top" src="Assets/images/weather-dashboard.png" alt="Weather Dashboard"></a>
+                  <div class="card-body">
+                    <p class="card-text">A weather dashboard utilizing API's to get the most up to date weather info for your area.</p>
+                    <a href="https://github.com/jmh129/gt-weather-dashboard">
+                    <i class="fa fa-github fa-2x">
+                    </i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="card mb-2" style="width: auto;">
+                  <a href="https://jmh129.github.io/gt-password-generator/">
+                    <img class="card-img-top" src="Assets/images/password-generator.png" alt="Password Generator"></a>
+                    <div class="card-body">
+                      <p class="card-text">Need a strong password? Give this a random password generator a whirl!</p>
+                      <a href="https://github.com/jmh129/gt-password-generator">
+                        <i class="fa fa-github fa-2x">
+                        </i></a>
+                    </div>
+                  </div>
+                </div>
         </div>
-        <div class="col-md-6 pt-2">
+          
+        <!-- <div class="col-md-6 pt-2">
           <a
                 href="https://github.com/jmh129/Alien_Invaders"
                 target="_blank"
@@ -131,8 +166,8 @@
                   href="https://placekitten.com/"
                   target="_blank"
                 />
-        </div> -->
-      </div>
+        </div>
+      </div> -->
       </div>
     </main>
         <!-- Footer  -->
