update to contact page.

--- a/contact.html
+++ b/contact.html
@@ -56,63 +56,55 @@
       </div>
     </nav>
     <!-- Main Content  -->
-    <main class="container col-7 mt-5">
-      <header class="pb-2 pt-2 mb-2 border-bottom">
-        <h2>Contact</h2>
-      </header>
-      <div class="row">
-        <!-- Form  -->
-        <form class="ml-4">
-          <!-- Name  -->
-          <div class="form-group">
-            <label for="FormControlInput1">Name</label>
-            <input
-              type="name"
-              class="form-control"
-              id="FormControlInput1"
-              placeholder="Name"
-            />
+    <main class="container col-md-8 mt-5">
+      <div class="card" style="width: auto;">
+        <header class="card-title pb-2 pt-2 mb-2 ml-2 border-bottom">
+          <h2>CONTACT ME</h2>
+        </header>
+        <div class="card-body">
+          <div class="row">
+            <ul>
+              <li><a href="mailto: james.holding90@gmail.com">
+                <i class="fa fa-envelope fa-2x"></i
+                ></a><div> James.Holding90@gmail.com</div>
+              </li>
+              <li>
+                <i class="fa fa-mobile fa-4x"></i
+                ><div> 305.923.9652</div>
+              </li>
+
+              <li>
+                <a
+                  href="Assets/images/James Holding Resume .pdf"
+                  download
+                  ><i class="fa fa-file fa-2x"></i></a
+                ><div> Download My Resume </div>
+              </li>
+              <li>
+              <a href="https://www.linkedin.com/in/jamesholding">
+                <i class="fa fa-linkedin-square fa-3x"></i
+              ></a><div> Let Connect </div> </li>
+              <li>
+              <a href="https://github.com/jmh129">
+                <i class="fa fa-github fa-3x"> </i
+              ></a><div> Lets Code! </div></li>
+            </ul>
           </div>
-          <!-- Email  -->
-          <div class="form-group">
-            <label for="FormControlInput2">Email</label>
-            <input
-              type="email"
-              class="form-control"
-              id="FormControlInput2"
-              placeholder="Email"
-            />
-          </div>
-          <!-- Message  -->
-          <div class="form-group">
-            <label for="FormControlTextarea1">Message</label>
-            <textarea
-              class="form-control"
-              id="FormControlTextarea1"
-              placeholder="Message"
-              rows="3"
-            ></textarea>
-            <!-- Submit Button  -->
-            <br />
-            <button type="submit" class="btn btn-primary">
-              Submit
-            </button>
-          </div>
-        </form>
+        </div>
       </div>
     </main>
-     <!-- Footer  -->
-     <footer class="footer-copyright text-center py-2">
+    <!-- Footer  -->
+    <footer class="footer-copyright text-center py-2">
       © Copyright
       <a href="https://www.linkedin.com/in/jamesholding">
         <i class="fa fa-linkedin-square fa-2x"></i
       ></a>
       <a href="https://github.com/jmh129">
-      <i class="fa fa-github fa-2x">
-      </i></a>
+        <i class="fa fa-github fa-2x"> </i
+      ></a>
       <a href="mailto: james.holding90@gmail.com">
-        <i class="fa fa-google fa-2x">
-        </i></a>
+        <i class="fa fa-google fa-2x"> </i
+      ></a>
     </footer>
     <!-- Bootsrap JS and Jquery  -->
     <script
