--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
               <li>
               <a href="https://www.linkedin.com/in/jamesholding">
                 <i class="fa fa-linkedin-square fa-3x"></i
-              ></a><div> Let Connect </div> </li>
+              ></a><div> Lets Connect </div> </li>
               <li>
               <a href="https://github.com/jmh129">
                 <i class="fa fa-github fa-3x"> </i
