trying to fix blue phone number.

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="format-detection" content="telephone=no">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
@@ -71,7 +70,7 @@
               </li>
               <li>
                 <i class="fa fa-mobile fa-4x"></i
-                ><div> 305.923.9652</div>
+                ><div class="phone"> 305.923.9652</div>
               </li>
 
               <li>
