--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
               </li>
               <li>
                 <i class="fa fa-mobile fa-4x"></i
-                ><div class="phone"> 305.923.9652</div>
+                ><div> 305.923.9652</div>
               </li>
 
               <li>
