--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="format-detection" content="telephone=no">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
@@ -68,7 +67,7 @@
             <a href="https://jmh129.github.io/BruHub/">
               <img class="card-img-top" src="Assets/images/brewerypage.png" alt="BrewHub"></am>
               <div class="card-body">
-                <p class="card-text mb-2">A team project created to location breweries in your area as well as, giving you an endless supply of memes and jokes. Check it out next time you want to brew it up with your friends.</p>
+                <p class="card-text mb-2">BruHub! A team project created to locate breweries in your area as well as, giving you an endless supply of memes and jokes. Check it out next time you want to brew it up with your friends.</p>
                 <a href="https://github.com/jmh129/BruHub">
                   <i class="fa fa-github fa-2x">
                   </i></a>
