--- a/contact.html
+++ b/contact.html
@@ -69,8 +69,9 @@
                 ></a><div> James.Holding90@gmail.com</div>
               </li>
               <li>
+                <a href="tel:1-923-9652">
                 <i class="fa fa-mobile fa-4x"></i
-                ><div> 305.923.9652</div>
+                ><div> 305.923.9652</div></a>
               </li>
 
               <li>
