fixed bruhub text as link.

--- a/portfolio.html
+++ b/portfolio.html
@@ -65,12 +65,12 @@
         <div class="col-sm-6">
           <div class="card mb-2" style="width: auto;">
             <a href="https://jmh129.github.io/BruHub/">
-              <img class="card-img-top" src="Assets/images/brewerypage.png" alt="BrewHub"></am>
+              <img class="card-img-top" src="Assets/images/brewerypage.png" alt="BrewHub"></a>
               <div class="card-body">
                 <p class="card-text mb-2">BruHub! A team project created to locate breweries in your area as well as, giving you an endless supply of memes and jokes. Check it out next time you want to brew it up with your friends.</p>
                 <a href="https://github.com/jmh129/BruHub">
                   <i class="fa fa-github fa-2x">
-                  </i></a>
+                  </i>
               </div>
             </div>
           </div>
