--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
           </div>
           <div class="col-sm-6">
             <div class="card mb-2" style="width: auto;">
-              <a href="https://jmh129.github.io/BruHub/">
+              <a href="https://github.com/jmh129/gt-template-engine-employee-summary">
                 <img class="card-img-top" src="Assets/images/CLI-output.png" alt="Team Generator"></a>
                 <div class="card-body">
                   <p class="card-text mb-2">Team List Generator! This is a CLI application that allows the user to enter info via their terminal and an html file will be output with their team list. This app utilizes Node.js, Inquirer and Jestƒ.</p>
