update to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -76,6 +76,30 @@
           </div>
           <div class="col-sm-6">
             <div class="card mb-2" style="width: auto;">
+              <a href="https://damp-refuge-14188.herokuapp.com/">
+                <img class="card-img-top" src="Assets/images/flex-city.png" alt="Flex City"></a>
+                <div class="card-body">
+                  <p class="card-text mb-2">Flex City! Have some fitness goals? We can help you! Check out this fitness tracker app and meet all your exercise needs!</p>
+                  <a href="https://github.com/jmh129/project-2">
+                    <i class="fa fa-github fa-2x">
+                    </i>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="card mb-2" style="width: auto;">
+                <a href="https://github.com/jmh129/gt-employee-tracker-cms">
+                  <img class="card-img-top" src="Assets/images/CMS-gif.gif" alt="CMS"></a>
+                  <div class="card-body">
+                    <p class="card-text mb-2">This employee tracker will help you keep track of all of your employees and departmental budgets utilizing node js and inquirer!</p>
+                    <a href="https://github.com/jmh129/gt-employee-tracker-cms">
+                      <i class="fa fa-github fa-2x">
+                      </i>
+                  </div>
+                </div>
+              </div>
+          <div class="col-sm-6">
+            <div class="card mb-2" style="width: auto;">
               <a href="https://github.com/jmh129/gt-template-engine-employee-summary">
                 <img class="card-img-top" src="Assets/images/CLI-output.png" alt="Team Generator"></a>
                 <div class="card-body">
@@ -123,64 +147,6 @@
                   </div>
                 </div>
         </div>
-          
-        <!-- <div class="col-md-6 pt-2">
-          <a
-                href="https://github.com/jmh129/Alien_Invaders"
-                target="_blank"
-              >
-                <img
-                  class="img img-fluid py-3"
-                  src="./Assets/images/alien-invaders.png"
-                  alt="Alien Invaders Image"
-                  a
-                  href="https://github.com/jmh129/Alien_Invaders"
-                  target="_blank"
-                />
-        </div>
-        <div class="col-md-6 pt-2">
-          <a
-                href="https://www.fillmurray.com/"
-                target="_blank"
-              >
-                <img
-                  class="img img-fluid py-3"
-                  src="http://www.fillmurray.com/300/200"
-                  alt="Fill Murray"
-                  a
-                  href="https://www.fillmurray.com/"
-                  target="_blank"
-                />
-        </div>
-        <div class="col-md-6 pt-2">
-          <a
-                href="https://www.fillmurray.com/"
-                target="_blank"
-              >
-                <img
-                  class="img img-fluid py-3"
-                  src="http://www.fillmurray.com/284/196"
-                  alt="Another Fill Murray"
-                  a
-                  href="https://www.fillmurray.com/"
-                  target="_blank"
-                />
-        </div>
-        <div class="col-md-6 pt-2">
-          <a
-                href="https://placekitten.com/"
-                target="_blank"
-              >
-                <img
-                  class="img img-fluid py-3"
-                  src="https://placekitten.com/200/139"
-                  alt="A Kitten"
-                  a
-                  href="https://placekitten.com/"
-                  target="_blank"
-                />
-        </div>
-      </div> -->
       </div>
     </main>
         <!-- Footer  -->
